# rviz-auto-sensor-panel

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  package.xml  requirements-dev.txt  rviz_common_plugins.xml
.github/: PULL_REQUEST_TEMPLATE.md
config/: default_demo.rviz  example_topic_grouping_rules.ini  topic_grouping_rules.ini
docs/: 0001-rviz-auto-sensor-panel-mvp.md  0002-rviz-auto-sensor-panel-architecture.md  0003-development-setup.md  0004-rviz-manual-validation.md  0005-quick-start.md  0006-topic-grouping-rules.md  0007-user-installation.md  0008-release-readiness.md  0009-maintainer-workflow.md  0010-main-merge-checklist.md  0011-colleague-quick-guide.md
include/rviz_auto_sensor_panel/: auto_display_factory.hpp  display_registry.hpp  sensor_catalog.hpp  sensor_classifier.hpp  sensor_tree_panel.hpp  topic_scanner.hpp  topic_state_logic.hpp  types.hpp
scripts/: build_local.sh  check_demo_topics.sh  clean_local_state.sh  common_ros_env.sh  configure_local.sh  doctor_local.sh  install_local.sh  install_user_local.sh  preflight_local.sh  rebuild_install_local.sh  run_demo_publisher.sh  run_demo_stack.sh  run_plain_rviz_with_plugin.sh  run_rviz_local.sh  run_rviz_preset.sh  run_rviz_with_rules.sh  smoke_test_local.sh  test_local.sh
src/: auto_display_factory.cpp  demo_sensor_publisher.cpp  display_registry.cpp  sensor_catalog.cpp  sensor_classifier.cpp  sensor_tree_panel.cpp  topic_scanner.cpp  topic_state_logic.cpp
test/: display_registry_test.cpp  sensor_catalog_test.cpp  sensor_classifier_test.cpp  topic_state_logic_test.cpp
