<?xml version="1.0"?>
<package format="3">
  <name>rviz_auto_sensor_panel</name>
  <version>0.1.0</version>
  <description>Automation-oriented RViz panel plugin for discovering sensor topics and creating displays.</description>
  <maintainer email="yang@example.com">Yang Yang</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
